2007-06-18  Mike Krüger <mkrueger@novell.com> 

	Improved recent file management. The files are now stored only on disc. Still TODO: File System Locks (how to use the posix log from .NET) and file system watcher.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/TreeViewOptions.cs: Expand root nodes by
	  default.

2007-05-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui/CommandService.cs: Unregister commands from
	  unloaded add-ins. Don't reuse extension objects when creating a
	  menu, since they may have changed.

2007-05-21  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Core.Gui/MessageService.cs: Ensure Dialogs are Destroy()'ed.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp: Reference copy fix.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am: Reference shared assemblies
	  from the correct location.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, MonoDevelop.Core.Gui.Dialogs/SetupApp.cs,
	  Makefile.am, MonoDevelop.Core.Gui.addin.xml: Implemented the gsetup
	  utility using Mono.Addins.
	* MonoDevelop.Core.Gui.Codons/LocalCommandItemCodon.cs,
	  MonoDevelop.Core.Gui.Codons/ItemSetCodon.cs,
	  MonoDevelop.Core.Gui.Codons/LinkItemCodon.cs,
	  MonoDevelop.Core.Gui.Codons/StockIconCodon.cs,
	  MonoDevelop.Core.Gui.Codons/CommandItemCodon.cs,
	  MonoDevelop.Core.Gui.Codons/CommandCodon.cs,
	  MonoDevelop.Core.Gui.Codons/DialogPanelCodon.cs,
	  MonoDevelop.Core.Gui.Codons/SeparatorItemCodon.cs: Use the
	  Mono.Addins attributes to provide extension documentation.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp,
	  MonoDevelop.Core.Gui.Dialogs/WizardDialog.cs,
	  MonoDevelop.Core.Gui.Dialogs/CurrentPanelPanel.cs,
	  MonoDevelop.Core.Gui.Dialogs/DefaultDialogPanelDescriptor.cs,
	  MonoDevelop.Core.Gui.Dialogs/IDialogPanel.cs,